--- a/apps/osrs-cache-viewer/package.json
+++ b/apps/osrs-cache-viewer/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "@kurza/ui-preset": "workspace:*",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-devtools": "^0.7.0",
@@ -32,6 +33,7 @@
     "vite-tsconfig-paths": "^6.0.2"
   },
   "devDependencies": {
+    "@pandacss/dev": "^0.30.2",
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/eslint-config": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
