--- a/apps/osrs-cache-docs/package.json
+++ b/apps/osrs-cache-docs/package.json
@@ -7,7 +7,8 @@
     "start": "panda codegen && astro dev",
     "build": "panda codegen && astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prepare": "panda codegen"
   },
   "dependencies": {
     "astro": "^5.2.3",
