--- a/apps/osrs-cache-docs/.gitignore
+++ b/apps/osrs-cache-docs/.gitignore
@@ -1,28 +1,32 @@
-# build output
+# Build output
 dist/
-# generated types
 .astro/
 
-# dependencies
+# Dependencies
 node_modules/
 
-# logs
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
-# environment variables
+# Environment variables
 .env
-.env.production
+.env.*
+!.env.example
 
 # macOS-specific files
 .DS_Store
 
-# jetbrains setting folder
+# IDEs
 .idea/
+.vscode/
 
-## Panda
-src/styled-system
-src/styled-system-studio
+# Panda CSS
+src/styled-system/
+src/styled-system-studio/
+
+# Ensure .gemini is NOT ignored
+!.gemini/
