feat(viewer): OpenRS2 Cache Loading MVP
- Implemented @kurza/osrs-cache-loader with OpenRS2 API integration.
- Created OSRS Cache Viewer dashboard with asset count summary.
- Simplified viewer UI to a single modern index page using PandaCSS.
- Established initial project documentation and Getting Started guide.
- Standardized ESLint and monorepo quality gates.

--- a/apps/osrs-cache-viewer/package.json
+++ b/apps/osrs-cache-viewer/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
+    "@kurza/osrs-cache-loader": "workspace:*",
     "@kurza/ui-preset": "workspace:*",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-devtools": "^0.7.0",
