--- a/packages/osrs-cache-loader/package.json
+++ b/packages/osrs-cache-loader/package.json
@@ -1,16 +1,22 @@
 {
   "name": "@kurza/osrs-cache-loader",
   "version": "0.0.1",
+  "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "dev": "tsup src/index.ts --format cjs,esm --watch --dts",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "vitest run"
   },
   "devDependencies": {
+    "@tanstack/eslint-config": "^0.3.4",
+    "@types/node": "^22.19.8",
+    "eslint": "^9.39.2",
     "tsup": "^8.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^3.2.4"
   }
 }
