--- a/internal/ui-preset/package.json
+++ b/internal/ui-preset/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kurza/ui-preset",
   "version": "0.0.1",
-  "private": true,
+  "type": "module",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "scripts": {
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@pandacss/dev": "^0.30.0",
+    "@tanstack/eslint-config": "^0.3.4",
+    "eslint": "^9.39.2",
     "typescript": "^5.0.0"
   }
 }
