--- a/packages/osrs-cache-loader/package.json
+++ b/packages/osrs-cache-loader/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@tanstack/eslint-config": "^0.3.4",
     "@types/node": "^22.19.8",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "eslint": "^9.39.2",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
