fix: resolve workspace package entries and add missing docs link

--- a/apps/osrs-cache-docs/tsconfig.json
+++ b/apps/osrs-cache-docs/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "extends": "astro/tsconfigs/strict",
   "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+  "exclude": ["dist"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@kurza/osrs-cache-loader": ["../../packages/osrs-cache-loader/src/index.ts"],
+      "@kurza/ui-preset": ["../../internal/ui-preset/src/index.ts"]
+    }
+  }
 }
