feat(loader): fix and expand OSRS cache data loaders
- implemented Reference Table parser and GZIP decompression in @kurza/osrs-cache-loader
- added support for fetching asset counts for 16 categories including items, npcs, and objects
- refactored viewer to dynamically render asset count cards based on loader data
- added icon and color mappings for all new asset categories

--- a/packages/osrs-cache-loader/package.json
+++ b/packages/osrs-cache-loader/package.json
@@ -28,5 +28,9 @@
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
     "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "fflate": "^0.8.2",
+    "seek-bzip": "^2.0.0"
   }
 }
