feat(loader): Implement exact asset count verification against cache2
- Added a permanent integration test in `cache2-comparison.test.ts` that compares our asset counts against `@abextm/cache2` using live OpenRS2 data.
- Refactored `getAssetCounts` to provide exact counts by fetching archives and checking for non-empty file data, aligning with established standards for enums, structs, and params.
- Implemented `extractFiles` helper to correctly decode multi-file OSRS archives using footer metadata.
- Added `getArchive` to `OpenRS2Client` and `getRawFile` to `Cache` to support data-level verification.
- Updated `ReferenceTable` decoding to track `maxArchiveId` and `maxFileId`.
- Updated tech stack documentation to include `cache2` as a verification tool.

--- a/packages/osrs-cache-loader/package.json
+++ b/packages/osrs-cache-loader/package.json
@@ -20,6 +20,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@abextm/cache2": "^0.1.5",
     "@tanstack/eslint-config": "^0.3.4",
     "@types/node": "^22.19.8",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
