--- a/packages/osrs-cache-loader/package.json
+++ b/packages/osrs-cache-loader/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^22.19.8",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
+    "@vitest/coverage-v8": "3.2.4",
     "eslint": "^9.39.2",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
