refactor(standardization): comprehensive codebase modernization and standardization
Major improvements across the monorepo:
- Unified binary parsing utilities (smart, bigSmart, string) with full TSDoc.
- Standardized Loader API (ConfigLoader, ArchiveLoader) to encapsulate extraction logic.
- Centralized UI logic in @kurza/ui-components and @kurza/ui-preset.
- Unified monorepo on React 19 and resolved hook versioning conflicts.
- Migrated osrs-cache-viewer and osrs-cache-docs to shared semantic tokens.
- Fixed multi-file archive extraction logic in archive-utils.
- Established Panda CSS in internal/ui-components for standardized styling.
- Comprehensive test coverage (>80%) for all refactored core logic.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -12,6 +12,7 @@ COPY apps/osrs-cache-viewer/package.json ./apps/osrs-cache-viewer/
 COPY apps/osrs-cache-docs/package.json ./apps/osrs-cache-docs/
 COPY packages/osrs-cache-loader/package.json ./packages/osrs-cache-loader/
 COPY internal/ui-preset/package.json ./internal/ui-preset/
+COPY internal/ui-components/package.json ./internal/ui-components/
 
 # Copy config files needed for install/prepare scripts
 COPY apps/osrs-cache-viewer/panda.config.ts ./apps/osrs-cache-viewer/
@@ -20,6 +21,9 @@ COPY apps/osrs-cache-docs/panda.config.mjs ./apps/osrs-cache-docs/
 COPY apps/osrs-cache-docs/tsconfig.json ./apps/osrs-cache-docs/
 COPY internal/ui-preset/tsconfig.json ./internal/ui-preset/
 COPY internal/ui-preset/src ./internal/ui-preset/src
+COPY internal/ui-components/tsconfig.json ./internal/ui-components/
+COPY internal/ui-components/panda.config.ts ./internal/ui-components/
+COPY internal/ui-components/src ./internal/ui-components/src
 
 # Install dependencies (this will run 'prepare' scripts)
 RUN pnpm install
