--- a/apps/osrs-cache-docs/package.json
+++ b/apps/osrs-cache-docs/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@astrojs/check": "^0.9.6",
     "@astrojs/react": "^4.0.0",
+    "@kurza/ui-components": "workspace:*",
     "@kurza/ui-preset": "workspace:*",
     "astro": "^5.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.30.2",
