--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.28.2",
+  "pnpm": {
+    "overrides": {
+      "react": "^19.2.0",
+      "react-dom": "^19.2.0",
+      "@types/react": "^19.2.0",
+      "@types/react-dom": "^19.2.0"
+    }
+  },
   "devDependencies": {
     "turbo": "^2.8.2"
   }
