--- a/internal/ui-components/tsconfig.json
+++ b/internal/ui-components/tsconfig.json
@@ -8,5 +8,5 @@
     "skipLibCheck": true,
     "declaration": true
   },
-  "include": ["src", "eslint.config.js"]
+  "include": ["src", "eslint.config.js", "panda.config.ts"]
 }
