--- a/internal/ui-components/package.json
+++ b/internal/ui-components/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.18",
     "lucide-react": "^0.561.0"
   },
   "peerDependencies": {
