--- a/packages/osrs-cache-loader/package.json
+++ b/packages/osrs-cache-loader/package.json
@@ -32,6 +32,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "env-paths": "^4.0.0",
     "fflate": "^0.8.2",
     "seek-bzip": "^2.0.0"
   }
