--- a/internal/ui-components/package.json
+++ b/internal/ui-components/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.18",
+    "@uiw/react-json-view": "^1.12.2",
     "lucide-react": "^0.561.0"
   },
   "peerDependencies": {
