feat(loader): OpenRS2 ZIP persistence and metadata rate limiting
- Implemented full ZIP persistence for OpenRS2 cache data to improve fetching efficiency.
- Added local metadata persistence with rate-limited update checks.
- Implemented proactive cache installation from flat tarball exports.
- Enhanced loader library with better error handling and testing for OpenRS2 integration.
- Updated viewer index page with sync status and manual refresh controls.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     command: pnpm --filter osrs-cache-viewer dev --host 0.0.0.0
     ports:
       - "3000:3000"
+    volumes:
+      - osrs-cache-data:/root/.local/share/osrs-cache-nodejs
     develop:
       watch:
         - action: sync
@@ -42,3 +44,6 @@ services:
             - node_modules/
         - action: rebuild
           path: package.json
+
+volumes:
+  osrs-cache-data:
