--- a/packages/osrs-cache-loader/package.json
+++ b/packages/osrs-cache-loader/package.json
@@ -23,6 +23,7 @@
     "@abextm/cache2": "^0.1.5",
     "@tanstack/eslint-config": "^0.3.4",
     "@types/node": "^22.19.8",
+    "@types/tar-stream": "^3.1.4",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "@vitest/coverage-v8": "3.2.4",
@@ -34,6 +35,7 @@
   "dependencies": {
     "env-paths": "^4.0.0",
     "fflate": "^0.8.2",
-    "seek-bzip": "^2.0.0"
+    "seek-bzip": "^2.0.0",
+    "tar-stream": "^3.1.7"
   }
 }
